<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_manga"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MangaDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:background="@color/colorAccent"
                android:scaleType="fitCenter" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/text_rounded_judul"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/judul_manga"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_judul"
                    android:background="@drawable/tex_rounded_vol"
                    android:fontFamily="@font/changa"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    tools:text="@string/genre_manga" />
            </RelativeLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_view_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/view_deskripsi"
                android:textColor="#000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_marginStart="100dp"
                android:layout_toEndOf="@id/tv_view_deskripsi"
                android:background="@drawable/tex_rounded_button"
                android:fontFamily="@font/aladin"
                android:text="@string/baca_manga"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/view_deskripsi"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/view_detail"
            android:textColor="#000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/Text.Keterangan"
                    android:text="@string/penerbit" />

                <TextView
                    android:id="@+id/tv_penerbit"
                    style="@style/Text.Isi"
                    android:text="@string/view_nama_penerbit" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/Text.Keterangan"
                    android:text="@string/tanggal_terbit" />

                <TextView
                    android:id="@+id/tv_terbit"
                    style="@style/Text.Isi"
                    android:text="@string/view_tanggal_terbit" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/Text.Keterangan"
                    android:text="@string/volume" />

                <TextView
                    android:id="@+id/tv_volume"
                    style="@style/Text.Isi"
                    android:text="@string/view_volume" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/profil_pengarang"
            android:textColor="#000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profil"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/tv_pengarang"
                style="@style/Text.Isi"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_profil"
                android:text="@string/nama_pengarang" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>